<resources>
    <string name="app_name">CTS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="network_error">An error occurred</string>
    <string name="invalid_login">network error</string>
    <string name="sign_in_using">Sign in using</string>
    <string name="or">Or</string>
    <string name="type_your_search_here">Type your search here</string>
    <string name="hellooo">Hellooo!</string>
    <string name="view_inbox">View Inbox</string>
    <string name="home">Home</string>
    <string name="delegation">Delegation</string>
    <string name="dashboard">DashBoard</string>
    <string name="to_do_list">To-Do List</string>
    <string name="advanced_search">Advanced Search</string>
    <string name="bam">BAM</string>
    <string name="my_menu">My Menu</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="sign_out">Logout</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="completed">Completed</string>
    <string name="requested">My requests</string>
    <string name="this_week">This Week</string>
    <string name="in_progress">In Progress</string>
    <string name="pending_signature">Pending Signature</string>
    <string name="for_approval">For Approval</string>
    <string name="draft">Draft</string>
    <string name="delayed">Delayed</string>
    <string name="search">Search</string>
    <string name="reports">Reports</string>
    <string name="analytics">Analytics</string>
    <string name="reference_number">Reference number</string>
    <string name="category">Category</string>
    <string name="transfer_form">Transfer from</string>
    <string name="from_transfer_date">From transfer date</string>
    <string name="to_transfer_date">To transfer date</string>
    <string name="transfer_to">Transfer To</string>
    <string name="sender">Sender</string>
    <string name="recipient">Recipient</string>
    <string name="subject">Subject</string>
    <string name="reset">Reset</string>
    <string name="link_correspondence">Linked correspondence</string>
    <string name="actions">Actions</string>
    <string name="my_transfers">My transfer</string>
    <string name="notes">Notes</string>
    <string name="reply_to_user">Reply to user</string>
    <string name="reply_to_structure">Reply to structure</string>
    <string name="complete">Complete</string>
    <string name="transfer">Transfer</string>
    <string name="attachments">Attachments</string>
    <string name="show_attachments">Show attachments</string>
    <string name="attach">Attach</string>
    <string name="transfer_history">Transfer history</string>
    <string name="visual_tracking">Visual tracking</string>
    <string name="upload">Upload</string>
    <string name="scan">Scan</string>
    <string name="kpis">KPIs</string>
    <string name="purpose">Purpose</string>
    <string name="purposee">Purpose :</string>
    <string name="instruction_to_receiver">Instruction to receiver</string>
    <string name="to_user">To user</string>
    <string name="from_user">From user</string>
    <string name="to_structure">To structure</string>
    <string name="from_structure">From structure</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="sending_entity">Sending entity</string>
    <string name="receiving_entity">Receiving entity</string>
    <string name="receiver">Receiver</string>
    <string name="position">Position</string>
    <string name="transfer_from">Transfer From</string>
    <string name="due_date">Due date</string>
    <string name="due_datee">Due date :</string>
    <string name="transfer_date">Transfer date</string>
    <string name="linked_Corresp">Linked correspondence</string>
    <string name="delegated_users">Delegated users</string>
    <string name="delegate">Delegate</string>
    <string name="delegate_user">Delegate user</string>
    <string name="correspondence">Correspondence</string>
    <string name="english">English</string>
    <string name="arabic">ِArabic</string>
    <string name="french">French</string>
    <string name="error">Error</string>
    <string name="invalidLoginMessage">Invalid username or password</string>
    <string name="noSignatureRegion">No predefined signature regions</string>
    <string name="noSignature">No predefined signature</string>
    <string name="ok">Ok</string>
    <string name="copyright">Copyright &#169; 2017 everteam-gs. All rights reserved.</string>
    <string name="titleApp">Correspondence Tracking System</string>
    <string name="welcome">Welcome</string>
    <string name="mydelegates">My delegates:</string>
    <string name="onbehalfof">on behalf of</string>
    <string name="incoming">Incoming</string>
    <string name="outgoing">Outgoing</string>
    <string name="internal">Internal</string>
    <string name="simplesearch">Simple Search</string>
    <string name="offlinemode">Go Offline</string>
    <string name="onlinemode">Online Mode</string>
    <string name="advancedsearch">Advanced Search</string>
    <string name="logout">Logout</string>
    <string name="logoutmessage">Are you sure you want to logout ?</string>
    <string name="cancel">Cancel</string>
    <string name="downloadprogress">Download Progress</string>
    <string name="title_stop_voicenote">Do you want to stop the recording?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="AddNew">Attach</string>
    <string name="ShowAttachments">Show attachments</string>
    <string name="Transfer">Transfer</string>
    <string name="multipleTransfer">Multiple transfer</string>
    <string name="Complete">Archive</string>
    <string name="Track">Tracking</string>
    <string name="VisualTrack">Visual tracking</string>
    <string name="CompleteTitle">Are you sure you want to archive?</string>
    <string name="Reply">Reply</string>
    <string name="ReplyTo">Reply to</string>
    <string name="Dismiss">Dismiss</string>
    <string name="SignReply">Sign and return</string>
    <string name="SignTransfer">Sign and transfer</string>
    <string name="DismissCopy">Dismiss Copy</string>
    <string name="quickactions">Actions</string>
    <string name="action">Action</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="mainpage">Main Page</string>
    <string name="gridrowstyle">Grid Row Style</string>
    <string name="urgent">Urgent</string>
    <string name="topurgent">Top Urgent</string>
    <string name="Attachments">Attachments</string>
    <string name="title_activity_viewer">Correspondence</string>
    <string name="cts">CTS</string>
    <string name="company">everteam.gs</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="tracking">Tracking</string>
    <string name="auditactions">Audit Actions</string>
    <string name="AreYouSureYouWantToGenerateLetter">Are you sure you want to generate a letter for the following recipients?</string>
    <string name="developerpassword">Developer Password</string>
    <string name="showurl">show url</string>
    <string name="saveAnnotations">Save Annotations</string>
    <string name="clear_photo">Clear Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="URL">URL</string>
    <string name="profile_image">Profile Image</string>
    <string name="remove">Remove</string>
    <string name="btn_save_signature">Save Signature</string>
    <string name="paint">Paint</string>
    <string name="colors">Colors</string>
    <string name="signature">My Signature</string>
    <string name="tools">Tools</string>
    <string name="loading_data">Loading data..</string>
    <string name="nbrOfCorrespondence">Number Of Correspondences per page: </string>
    <string name="addDelegate">Delegation</string>
    <string name="editSignature">Edit Signature</string>
    <string name="displaySettings">Display Settings</string>
    <string name="offlineSettings">Offline Settings</string>
    <string name="clearCache">Clear Cache</string>
    <string name="accounts">Accounts</string>
    <string name="active">Active</string>
    <string name="inactive">Inactive</string>
    <string name="menu">Menu</string>
    <string name="ignore_sync_cancel">Synchronize Data?</string>
    <string name="ignore">Ignore</string>
    <string name="sync">Sync</string>
    <string name="user">User</string>
    <string name="privacy">Privacy</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="can_sign">Can sign</string>
    <string name="old_document">Old document</string>
    <string name="contact">Contact</string>
    <string name="machinename">Machine Name</string>
    <string name="operation">Operation</string>
    <string name="users">Users</string>
    <string name="structures">Structures</string>
    <string name="purposes">Purpose</string>
    <string name="transferDueDate">Transfer due date</string>
    <string name="instructionsToReceiver">Instructions to receiver</string>
    <string name="instructions">Instruction</string>
    <string name="removeAll">Remove All</string>
    <string name="transferAddNew">Add New</string>
    <string name="lockCategory">Lock</string>
    <string name="locked_locked">Locked</string>
    <string name="locked_unlocked">Unlocked</string>
    <string name="locked_lockedotheruser">Locked By</string>
    <string name="privacyCategory">Privacy</string>
    <string name="privacy_normal">Normal</string>
    <string name="privacy_secret">Confidential</string>
    <string name="privacy_top_secret">High Confidential</string>
    <string name="privacy_public">Public</string>
    <string name="privacy_internal">Internal</string>
    <string name="privacy_limited">Limited Access</string>
    <string name="privacy_empty">-</string>
    <string name="priorityCategory">Priority</string>
    <string name="priority_normal">Normal</string>
    <string name="priority_medium">Medium</string>
    <string name="priority_high">Urgent</string>
    <string name="priority_top_urgent">Top Urgent</string>
    <string name="priority_empty">-</string>
    <string name="categoryCategory">Category</string>
    <string name="category_incomming">Incoming</string>
    <string name="category_external">Outgoing</string>
    <string name="category_internal">Internal</string>
    <string name="category_internal_broadcast">Internal Broadcast</string>
    <string name="overdue_since">Overdue since</string>
    <string name="overdue_days"> day(s)</string>
    <string name="category_cc">CC</string>
    <string name="category_empty">-</string>
    <string name="fileName">File Name</string>
    <string name="refNumber">Reference Number</string>
    <string name="dateRegistered">Date Registered</string>
    <string name="transferFrom">Transfer, from user</string>
    <string name="transferTo">Transfer, to user</string>
    <string name="warning">Warning</string>
    <string name="transferWarning">You already chosen this recipient</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="linked_correspondence">linked correspondence</string>
    <string name="submit">Submit</string>
    <string name="close">Close</string>
    <string name="privat">Private</string>
    <string name="non_arch_attachments">Non archived</string>
    <string name="required">(required)</string>
    <string name="sorry_no_data_founded">No data to display</string>
</resources>