<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/grey"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="5dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_weight="1"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:id="@+id/replyto"
                android:drawablePadding="5dp"
                android:fontFamily="@font/myriadpro_regular"
                android:text="@string/to_user"
                android:textColor="@color/black2"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_reply" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black2"
                android:fontFamily="@font/myriadpro_bold"
                android:textSize="16sp"
                android:id="@+id/tvCommentReplyTitle"
                android:text="Eslam Saleh"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textViewPurpose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/myriadpro_regular"
                android:textColor="@color/black2"
                android:layout_marginEnd="3dp"
                android:text="@string/purposes"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/required"
                android:textColor="@color/dark_gray"
                android:textSize="13sp" />

        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/replypurposeautocomplete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_arrow_down"
            android:dropDownHeight="wrap_content"
            android:hint="@string/purpose"
            android:imeOptions="actionDone"
            android:lines="1"
            android:inputType="textPersonName"
            android:paddingStart="10dp"
            android:gravity="center_vertical"
            android:paddingEnd="10dp"
            android:textSize="15sp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_date"
            android:layout_marginTop="30dp"
            android:id="@+id/textViewTransferDueDate"
            android:textSize="16sp"
            android:textColor="@color/black2"
            android:fontFamily="@font/myriadpro_regular"
            />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etreplyDueDate"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/edittext_background"
            android:drawableEnd="@drawable/ic_select_date"
            android:focusableInTouchMode="false"
            android:hint="@string/from_transfer_date"
            android:inputType="date"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/myriadpro_regular"
                android:textColor="@color/black2"
                android:layout_marginEnd="3dp"
                android:text="@string/message"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:text="@string/required"
                android:textColor="@color/dark_gray"
                android:textSize="13sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/etCommentReply"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:fontFamily="@font/myriadpro_regular"
            android:gravity="start"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black2"
            android:textSize="16sp"
            tools:ignore="SpeakableTextPresentCheck" />


    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="30dp"
        android:orientation="horizontal"
        >


        <TextView
            android:id="@+id/btnCancelreply"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginStart="10dp"
            android:background="@drawable/reset_background"
            android:fontFamily="@font/myriadpro_simibold"
            android:gravity="center"
            android:paddingStart="30dp"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/cancel"
            android:textColor="@color/black2"
            android:textSize="17sp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xx"
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/btnSendReply"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/green_background"
            android:fontFamily="@font/myriadpro_simibold"
            android:gravity="center"
            android:layout_weight="1"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="17sp"

            />


    </LinearLayout>

</LinearLayout>
