<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"

    android:orientation="vertical">

    <include layout="@layout/toolbar_layout"/>


    <androidx.recyclerview.widget.RecyclerView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/linkedrecyclersres"
        android:layout_weight="1"
        />


    <TextView
        android:id="@+id/noDataFounded"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/sorry_no_data_founded"
        android:textSize="19sp"
        android:visibility="gone" />



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_background"
        android:padding="30dp"
        >


        <TextView
            android:id="@+id/btnclose"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:background="@drawable/reset_background"
            android:fontFamily="@font/myriadpro_simibold"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/close"
            android:textColor="@color/black2"
            android:textSize="15sp"

            />


        <TextView
            android:id="@+id/btnSubmit"
            android:layout_width="144dp"
            android:layout_height="44dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/green_background"
            android:fontFamily="@font/myriadpro_simibold"
            android:gravity="center"
            android:paddingStart="30dp"
            android:paddingTop="5dp"
            android:paddingEnd="30dp"
            android:paddingBottom="5dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="15sp"

            />


    </RelativeLayout>

</LinearLayout>