<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical">


    <include layout="@layout/toolbar_layout"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:id="@+id/nonrel"
        android:visibility="gone"
        android:paddingTop="10dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/myriadpro_bold"
            android:text="@string/non_arch_attachments"
            android:layout_centerVertical="true"
            android:textColor="@color/black2"
            android:id="@+id/nonarch_label"
            android:maxLength="20"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/addnonarch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/green_background"
            android:drawablePadding="5dp"
            android:fontFamily="@font/myriadpro_simibold"
            android:paddingStart="17dp"
            android:paddingTop="7dp"
            android:paddingEnd="20dp"
            android:maxLength="20"
            android:paddingBottom="7dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_addnew" />

        <View
            android:id="@+id/vieww"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/addnonarch"
            android:layout_marginTop="10dp"
            android:background="#707070" />
    </RelativeLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/nonarchrecycler"
        android:layout_weight="1"
        />

    <TextView
        android:id="@+id/noDataFounded"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/sorry_no_data_founded"
        android:textSize="19sp"
        android:visibility="gone" />
</LinearLayout>